# gootea

./: LICENSE  default.nix  gootea.cabal
Chord/: Operation.hs  Store.hs
Chord/FingerTable/: Predecessors.hs
ChordSpec/: IDSpec.hs
ChordSpec/Cluster/: InMemoryStore.hs
Collector/: Collector.hs
CollectorSpec/: CollectorSpec.hs
DHT/: Codec.hs  DHT.hs  Distance.hs  Node.hs  NodeID.hs  Peer.hs  PeerStore.hs  Server.hs  TokenManager.hs  Transactions.hs  Types.hs
DHT/Routing/: Bucket.hs  Table.hs
DHTSpec/: BEncodeSpec.hs  DHTCodecSpec.hs  DHTNodeIDSpec.hs  DHTPeerStoreSpec.hs  DHTServerSpec.hs  DHTSpec.hs  RoutingTableSpec.hs
Fabius/: Indexer.hs  InfoHash.hs  Key.hs
FabiusSpec/: HDKMapSpec.hs  IndexAndSearchSpec.hs  SearcherSpec.hs
bittorrent-metadata-test/: LPMessageSpec.hs  TorrentSpec.hs
bittorrent-metadata/Data/: Torrent.hs
bittorrent-metadata/Network/Bittorrent/: Client.hs  Extension.hs  LPMessage.hs
chord/: messages.capnp
chord/Chord/: ChordMessage.hs  Finger.hs  FingerTable.hs  ID.hs  Node.hs  Service.hs
chord/Chord/FingerTable/: Predecessors.hs
chordspec/: ChordMessageSpec.hs  FingerSpec.hs  FingerTableSpec.hs  IDSpec.hs  ServiceSpec.hs
chordspec/Cluster/: Cluster.hs  InMemoryStore.hs
chordspec/FingerTable/: PredecessorsSpec.hs
collector/: Collector.hs
collectorspec/: CollectorSpec.hs
common/Common/Models/: InfoHash.hs
dht/: BEncode.hs
dht-bench/: DistanceBench.hs
dht/DHT/: Codec.hs  DHT.hs  Distance.hs  Node.hs  NodeID.hs  PeerStore.hs  Server.hs  TokenManager.hs
dhtspec/: DHTCodecSpec.hs  DHTNodeSpec.hs  DHTPeerStoreSpec.hs  DHTSpec.hs  DistanceSpec.hs  RoutingBucketSpec.hs  RoutingTableSpec.hs
fabius/Fabius/: HDKMap.hs  Query.hs  SearchResults.hs  Searcher.hs  Term.hs  Torrent.hs
fabiusspec/: IndexAndSearchSpec.hs  SearcherSpec.hs
protocol/: gootea.capnp
src/: Main.hs
store/Store/: Store.hs
