cabal-version:      2.2
name:               gootea
version:            0.1
license:            BSD-3-Clause
license-file:       LICENSE
author:             Florian Duraffourg
maintainer:         gootea@duraffourg.eu
category:           Network
homepage:           https://github.com/gootea/gootea
build-type:         Simple
extra-source-files: ChangeLog.md

library common
  exposed-modules:  Common.Models.InfoHash
  hs-source-dirs:   common
  build-depends:    base, bytestring, QuickCheck
  default-language: Haskell2010
  ghc-options:      -Wall -Werror=incomplete-patterns

library bittorrent-metadata
  exposed-modules:  Data.Torrent
                    Network.Bittorrent.Client
                    Network.Bittorrent.Extension
                    Network.Bittorrent.LPMessage
  hs-source-dirs:   bittorrent-metadata
  build-depends:    base
                  , bencoding
                  , bytestring
                  , containers
                  , cryptohash
                  , mtl
                  , network
                  , text
  default-language: Haskell2010
  ghc-options:      -Wall -Werror=incomplete-patterns

library dht
  exposed-modules:  BEncode
                    DHT.Codec
                    DHT.DHT
                    DHT.Distance
                    DHT.Node
                    DHT.NodeID
                    DHT.Peer
                    DHT.PeerStore
                    DHT.Routing.Bucket
                    DHT.Routing.Table
                    DHT.Server
                    DHT.TokenManager
                    DHT.Transactions
                    DHT.Types
  hs-source-dirs:   dht
  build-depends:    base
                  , bytestring
                  , common
                  , containers
                  , cryptohash
                  , mtl
                  , network
                  , random
                  , text
                  , time
  default-language: Haskell2010
  ghc-options:      -Wall -Werror=incomplete-patterns

library collector
  exposed-modules:  Collector
  hs-source-dirs:   collector
  build-depends:    base, bytestring, containers, mtl, text
  default-language: Haskell2010
  ghc-options:      -Wall -Werror=incomplete-patterns

library chord
  exposed-modules:  Chord.ChordMessage
                    Chord.Finger
                    Chord.FingerTable
                    Chord.FingerTable.Predecessors
                    Chord.ID
                    Chord.Node
                    Chord.Operation
                    Chord.Service
                    Chord.Store
  other-modules:    Capnp.Gen.ById.Xfa197b59aed5fcfc
                    Capnp.Gen.Messages
                    Capnp.Gen.Messages.Pure
  hs-source-dirs:   chord
  build-depends:    base
                  , bytestring
                  , capnp
                  , common
                  , containers
                  , mtl
                  , network
                  , text
                  , QuickCheck
                  , vector
                  , generic-random
  default-language: Haskell2010
  ghc-options:      -Wall -Werror=incomplete-patterns

library fabius
  exposed-modules:  Fabius.HDKMap
                    Fabius.Indexer
                    Fabius.Key
                    Fabius.Query
                    Fabius.SearchResults
                    Fabius.Searcher
                    Fabius.Term
                    Fabius.Torrent
  hs-source-dirs:   fabius
  build-depends:    base, bytestring, common, containers, mtl, text
  default-language: Haskell2010
  ghc-options:      -Wall -Werror=incomplete-patterns

library store
  exposed-modules:  Store.Store
  hs-source-dirs:   store
  build-depends:    base, bittorrent-metadata, bytestring, containers, dht, mtl, text
  default-language: Haskell2010
  ghc-options:      -Wall -Werror=incomplete-patterns

executable gootea
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base
                  , bencoding
                  , bittorrent-metadata
                  , bytestring
                  , collector
                  , containers
                  , dht
                  , mtl
                  , network
                  , split
                  , store
                  , text
  default-language: Haskell2010
  ghc-options:      -Wall -Werror=incomplete-patterns

test-suite bittorrent-metadata-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      LPMessageSpec
  hs-source-dirs:     bittorrent-metadata-test
  build-depends:      base
                    , HUnit
                    , QuickCheck
                    , bencoding
                    , bittorrent-metadata
                    , bytestring
                    , hspec
                    , hspec-expectations
                    , network
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -Wall

test-suite dhtspec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      BEncodeSpec
                      DHTCodecSpec
                      DHTNodeSpec
                      DHTPeerStoreSpec
                      DHTServerSpec
                      DHTSpec
                      DistanceSpec
                      RoutingBucketSpec
                      RoutingTableSpec
  hs-source-dirs:     dhtspec
  build-depends:      base
                    , HUnit
                    , QuickCheck
                    , bytestring
                    , common
                    , containers
                    , dht
                    , hspec
                    , hspec-expectations
                    , mtl
                    , network
                    , random
                    , time
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -Wall

test-suite collectorspec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      CollectorSpec
  hs-source-dirs:     collectorspec
  build-depends:      base
                    , HUnit
                    , QuickCheck
                    , collector
                    , containers
                    , hspec
                    , hspec-expectations
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -Wall

test-suite chordspec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      Cluster.Cluster
                      Cluster.InMemoryStore
                      FingerSpec
                      FingerTable.PredecessorsSpec
                      FingerTableSpec
                      IDSpec
                      ServiceSpec
                      ChordMessageSpec
  hs-source-dirs:     chordspec
  build-depends:      base
                    , HUnit
                    , QuickCheck
                    , bytestring
                    , chord
                    , common
                    , containers
                    , hspec
                    , hspec-expectations
                    , mtl
                    , network
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -Wall

test-suite fabiusspec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      HDKMapSpec
                      IndexAndSearchSpec
                      SearcherSpec
  hs-source-dirs:     fabiusspec
  build-depends:      base
                    , HUnit
                    , QuickCheck
                    , common
                    , containers
                    , fabius
                    , hspec
                    , hspec-expectations
                    , text
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -Wall
